--- a/nguyen-thi-my/css/style.css
+++ b/nguyen-thi-my/css/style.css
@@ -123,15 +123,15 @@ body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -1.2em;
-    margin-right: -1.2em;
+    /* margin-left: -1.2em;
+    margin-right: -1.2em; */
 }
 
 .row>* {
@@ -335,7 +335,7 @@ body {
 header {
     height: 100px;
     background-color: var(--main-color-white);
-    box-shadow: 10px 0 10px rgb(218, 212, 203);
+    box-shadow: 5px 0 5px rgb(218, 212, 203);
 }
 
 .navbar .logo h3 {
@@ -477,7 +477,7 @@ p {
 
 .title-project {
     background-color: var(--main-color-white);
-    padding: 20px 0;
+    padding: 20px 30px;
     border-radius: 30px;
 }
 
