--- a/nguyen-thi-my/css/style.css
+++ b/nguyen-thi-my/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600&display=swap');
+
+/*  */
+
 :root {
     --main-color-white: #F4F6F8;
     --main-color-orange: #F7E576;
