[MyNT]:topic practice

--- a/nguyen-thi-my/css/style.css
+++ b/nguyen-thi-my/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600&display=swap');
 
-/*  */
+/* Edit */
 
 :root {
     --main-color-white: #F4F6F8;
@@ -96,6 +96,10 @@ body {
     padding-bottom: 2rem;
 }
 
+.pl-4 {
+    padding-left: 22px;
+}
+
 .pt-4 {
     padding-top: 1rem;
 }
@@ -126,15 +130,15 @@ body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -1.2em;
-    margin-right: -1.2em;
+    /* margin-left: -1.2em;
+    margin-right: -1.2em; */
 }
 
 .row>* {
@@ -332,6 +336,10 @@ body {
     }
 }
 
+.text-left {
+    text-align: left;
+}
+
 
 /* -----Header------- */
 
@@ -339,6 +347,7 @@ header {
     height: 100px;
     background-color: var(--main-color-white);
     box-shadow: 5px 0 5px rgb(218, 212, 203);
+    z-index: 9999;
 }
 
 .navbar .logo h3 {
@@ -370,7 +379,7 @@ header {
 /* Header-mobile */
 
 .navbar-mobile {
-    padding: 2rem 20px;
+    padding: 23px 20px;
 }
 
 .navbar-mobile ul {
@@ -420,6 +429,9 @@ p {
 
 .sticky {
     position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
 }
 
 .fixed {
@@ -442,10 +454,15 @@ p {
 
 /* -----Banner------- */
 
+main {
+    margin-top: 100px;
+    width: 100%;
+}
+
 .banner {
     width: 100%;
     background-color: var(--main-color-white);
-    margin-top: 100px;
+    position: relative;
 }
 
 .image img {
@@ -472,6 +489,71 @@ p {
     font-weight: bold;
 }
 
+.bubbles img {
+    width: 50px;
+    animation: bubble 7s linear infinite;
+}
+
+.bubbles {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    bottom: -70px;
+    align-items: center;
+}
+
+@keyframes bubble {
+    0% {
+        transform: translateY(0);
+        opacity: 70;
+    }
+    50% {
+        opacity: 1;
+    }
+    70% {
+        opacity: 40;
+    }
+    100% {
+        transform: translateY(-80vh);
+        opacity: 70;
+    }
+}
+
+.bubbles img:nth-child(1) {
+    animation-delay: 2s;
+    width: 10%;
+}
+
+.bubbles img:nth-child(2) {
+    animation-delay: 4s;
+    width: 5%;
+}
+
+.bubbles img:nth-child(3) {
+    animation-delay: 2s;
+    width: 5%;
+}
+
+.bubbles img:nth-child(4) {
+    animation-delay: 2s;
+    width: 10%;
+}
+
+.bubbles img:nth-child(5) {
+    animation-delay: 1s;
+    width: 5%;
+}
+
+.bubbles img :nth-child(6) {
+    animation-delay: 4s;
+    width: 5%;
+}
+
+.wave-bg {
+    z-index: 99999;
+}
+
 
 /* -----End Banner------- */
 
@@ -482,8 +564,35 @@ p {
     padding: 60px;
 }
 
-.personal-information-image img {
+.personal-information-image {
     padding: 60px;
+}
+
+.card-personal {
+    position: relative;
+    /* padding: 60px 72px; */
+}
+
+.detail-person {
+    position: absolute;
+    bottom: -100px;
+    background-color: ghostwhite;
+    color: black;
+    font-weight: bold;
+    display: none;
+    transition: .4s;
+    padding: 10px 0;
+    width: 100%;
+}
+
+.card-personal img:hover {
+    opacity: .5;
+}
+
+.card-personal:hover>.detail-person {
+    transition: .4s;
+    display: block;
+    bottom: 0px;
 }
 
 .title-project {
