--- a/nguyen-thi-my/css/style.css
+++ b/nguyen-thi-my/css/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
 /* Edit */
 
 :root {
     --main-color-white: #F4F6F8;
     --main-color-orange: #F7E576;
+    --main-color-bg: #F1F2F7;
 }
 
 * {
@@ -14,15 +15,35 @@
 }
 
 body {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .flex {
     display: flex;
 }
 
+.flex-row {
+    flex-direction: row;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.flex-order-1 {
+    order: 1;
+}
+
+.flex-order-2 {
+    order: 2;
+}
+
 .d-none {
     display: none;
+}
+
+.justify-center {
+    justify-content: center;
 }
 
 .justify-between {
@@ -104,6 +125,14 @@ body {
     padding-top: 1rem;
 }
 
+.pt-8 {
+    padding-top: 2rem;
+}
+
+.pb-8 {
+    padding-bottom: 1rem;
+}
+
 .m {
     margin: 0;
 }
@@ -126,12 +155,65 @@ body {
     padding-bottom: 1rem;
 }
 
+.my-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
 .container {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+}
+
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
 }
 
 .row {
@@ -159,6 +241,12 @@ body {
     }
     .d-sm-flex {
         display: flex;
+    }
+    .mt-sm-0 {
+        margin-top: 0;
+    }
+    .container {
+        max-width: 540px;
     }
     .col-sm-1 {
         width: 8.33%;
@@ -208,6 +296,9 @@ body {
     .d-md-none {
         display: none;
     }
+    .container {
+        max-width: 720px;
+    }
     .col-md-1 {
         width: 8.33%;
     }
@@ -256,6 +347,9 @@ body {
     .d-lg-none {
         display: none;
     }
+    .container {
+        max-width: 960px;
+    }
     .col-lg-1 {
         width: 8.33%;
     }
@@ -297,6 +391,9 @@ body {
 @media (min-width:1220px) {
     .text-xl-left {
         text-align: left;
+    }
+    .container {
+        max-width: 1140px;
     }
     .col-xl-1 {
         width: 8.33%;
@@ -445,6 +542,10 @@ p {
     width: 100%;
 }
 
+.box-shadow {
+    box-shadow: 10px 0 10px ghostwhite;
+}
+
 
 /* End Header-mobile */
 
@@ -457,6 +558,7 @@ p {
 main {
     margin-top: 100px;
     width: 100%;
+    /* background: var(--main-color-white); */
 }
 
 .banner {
@@ -522,32 +624,32 @@ main {
 
 .bubbles img:nth-child(1) {
     animation-delay: 2s;
-    width: 10%;
+    width: 25px;
 }
 
 .bubbles img:nth-child(2) {
     animation-delay: 4s;
-    width: 5%;
+    width: 35px;
 }
 
 .bubbles img:nth-child(3) {
     animation-delay: 2s;
-    width: 5%;
+    width: 30px;
 }
 
 .bubbles img:nth-child(4) {
     animation-delay: 2s;
-    width: 10%;
+    width: 20px;
 }
 
 .bubbles img:nth-child(5) {
     animation-delay: 1s;
-    width: 5%;
+    width: 28px;
 }
 
 .bubbles img :nth-child(6) {
     animation-delay: 4s;
-    width: 5%;
+    width: 25px;
 }
 
 .wave-bg {
@@ -560,13 +662,13 @@ main {
 
 /* Section */
 
-.personal-information {
-    padding: 60px;
+
+/* .personal-information {
+    padding: 130px 60px;
 }
 
 .personal-information-image {
-    padding: 60px;
-}
+    padding: 60px; */
 
 .card-personal {
     position: relative;
@@ -638,3 +740,36 @@ h6 {
 
 
 /* End section*/
+
+
+/* Contact */
+
+.form-contact {
+    background-color: var(--main-color-bg);
+    border-radius: 20px;
+    padding: 20px 20px;
+}
+
+.form-contact input {
+    width: 100%;
+    margin: 20px 0;
+    height: 40px;
+    border-radius: 30px;
+    border: 2px solid var(--main-color-white)
+}
+
+.form-contact .btn {
+    margin: 0 20px;
+}
+
+.form-contact label {
+    margin: 0 20px;
+}
+
+
+/* End Contact */
+
+.footer {
+    padding: 30px 0;
+    background-color: var(--main-color-white);
+}
