--- a/nguyen-thi-my/css/style.css
+++ b/nguyen-thi-my/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
-/* Edit */
+/* My Edit */
 
 :root {
     --main-color-white: #F4F6F8;
@@ -233,6 +233,9 @@ body {
 }
 
 @media (min-width:576px) {
+    .pt-sm-2 {
+        padding-top: .5rem;
+    }
     .text-sm-center {
         text-align: center;
     }
@@ -662,12 +665,12 @@ main {
 
 /* Section */
 
-
-/* .personal-information {
-    padding: 130px 60px;
+.personal-information {
+    padding-top: 60px;
 }
 
-.personal-information-image {
+
+/* .personal-information-image {
     padding: 60px; */
 
 .card-personal {
@@ -747,7 +750,7 @@ h6 {
 .form-contact {
     background-color: var(--main-color-bg);
     border-radius: 20px;
-    padding: 20px 20px;
+    padding: 20px 50px;
 }
 
 .form-contact input {
@@ -764,6 +767,10 @@ h6 {
 
 .form-contact label {
     margin: 0 20px;
+}
+
+.contact-title {
+    padding-left: 20px;
 }
 
 
