--- a/nguyen-thi-my/css/style.css
+++ b/nguyen-thi-my/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
 
-/* My Edit */
+/* N.T My Edit */
 
 :root {
     --main-color-white: #F4F6F8;
