--- a/html-css/nguyen-thi-my/css/style.css
+++ b/html-css/nguyen-thi-my/css/style.css
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
-
-/* N.T My Edit */
-
 :root {
     --main-color-white: #F4F6F8;
     --main-color-orange: #F7E576;
@@ -16,6 +13,10 @@
 
 body {
     font-family: 'Raleway', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 .block {
@@ -459,7 +460,7 @@ body {
 
 /* -----Header------- */
 
-header {
+.header {
     height: 100px;
     background-color: var(--main-color-white);
     box-shadow: 5px 0 5px rgb(218, 212, 203);
@@ -509,12 +510,12 @@ header {
     z-index: 999;
 }
 
-h3 {
+.h3 {
     font-size: 2.5rem;
     font-weight: 700;
 }
 
-p {
+.p {
     font-size: 1rem;
 }
 
@@ -574,7 +575,7 @@ p {
 
 /* -----Banner------- */
 
-main {
+.main {
     margin-top: 100px;
     width: 100%;
     /* background: var(--main-color-white); */
@@ -585,11 +586,6 @@ main {
     background-color: var(--main-color-white);
     position: relative;
 }
-
-
-/* .image img {
-    padding: 60px;
-} */
 
 .banner-content {
     padding: 100px 60px;
@@ -723,7 +719,7 @@ main {
     border-radius: 30px;
 }
 
-h6 {
+.h6 {
     font-size: 1.25rem;
 }
 
@@ -793,11 +789,8 @@ h6 {
 
 /* End Contact */
 
-footer {
-    margin-top: 2rem;
-}
-
 .footer {
+    margin-top: 2rem;
     padding: 30px 0;
     background-color: var(--main-color-white);
 }
