[ChienPN]: topic practice

--- a/html-css/pham-ngoc-chien/style.css
+++ b/html-css/pham-ngoc-chien/style.css
@@ -1,8 +1,16 @@
 * {
   padding: 0;
   box-sizing: inherit;
+  box-sizing: border-box;
   margin: 0;
   font-family: "Quicksand", sans-serif;
+}
+html {
+  scroll-behavior: smooth;
+}
+:root {
+  --bg-green-600: rgba(5, 150, 105, 1);
+  --white: rgba(255, 255, 255, 1);
 }
 body::-webkit-scrollbar {
   width: 5px;
@@ -20,6 +28,9 @@ body::-webkit-scrollbar-thumb:hover {
 }
 header {
   position: fixed !important;
+  background-color: var(--bg-green-600);
+  justify-content: space-around;
+  z-index: 10000;
 }
 .container__about-avt a {
   position: relative;
@@ -34,8 +45,8 @@ header {
   position: absolute;
   border: 15px solid rgba(55, 140, 63, 0.6);
   border-radius: 50%;
-  height: 11rem;
-  width: 11rem;
+  height: 9rem;
+  width: 9rem;
   left: 0;
   opacity: 0;
   z-index: 9999;
@@ -64,13 +75,23 @@ header {
   animation: none;
 }
 
-.container__about-image {
+.container__about-background {
   background-image: url("./image/1.png");
   height: 600px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .border {
   border-radius: 0.25rem;
   box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.shadow-md {
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 .mw {
   max-width: 50px;
@@ -96,7 +117,12 @@ header {
 .checked-show:checked ~ .header__menu {
   transform: translateX(0);
 }
+.header__menu {
+  transform: translateX(-100%);
+  transition: transform linear 0.3s;
+}
 .header__menu-overlay {
+  background-color: rgba(0, 0, 0, 0.479);
   animation: fadeIn linear 0.3s;
 }
 @keyframes fadeIn {
@@ -108,22 +134,340 @@ header {
   }
 }
 /* header memu mobile - end*/
+
+.header__navbar-list .header__navbar-item:hover {
+  background-color: rgba(249, 250, 251, 1);
+}
+.header__navbar-list .header__navbar-item a:hover {
+  color: rgba(5, 150, 105, 1);
+}
+.container__about-img {
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+}
+.container__about-img .container__about-avt {
+  justify-content: center;
+  align-items: center;
+}
+.container__about-avt img {
+  width: 11rem;
+  height: 11rem;
+  border-radius: 50%;
+}
+.container__about-img h1 {
+  margin: 1rem 0;
+}
+.container__about-img p {
+  margin-bottom: 3rem;
+}
+.container__about-btn button {
+  height: 2.5rem;
+  width: 9rem;
+  background-color: var(--bg-green-600);
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.container__about-btn button:first-child {
+  margin-right: 10px;
+}
+.container__about-btn button:hover {
+  background-color: rgba(52, 211, 153, 1);
+}
+.container__social div a {
+  background-color: rgba(107, 114, 128, 1);
+  padding: 1rem;
+}
+.container__social div a:hover {
+  background-color: rgba(156, 163, 175, 1);
+}
+
+.flex {
+  display: flex;
+}
+.h-2 {
+  height: 0.5rem;
+}
+.h-5 {
+  height: 1.25rem;
+}
+.h-20 {
+  height: 5rem;
+}
+.items-center {
+  align-items: center;
+}
+.text-white {
+  color: var(--white);
+}
+.relative {
+  position: relative;
+}
+.absolute {
+  position: absolute;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-lg {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-center {
+  text-align: center;
+}
+.left-10 {
+  left: 2.5rem;
+}
+.leading-5 {
+  line-height: 1.7rem;
+}
+.font-bold {
+  font-weight: 700;
+}
+.z-10 {
+  z-index: 10;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.mx-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.mt-28 {
+  margin-top: 7rem;
+}
+.mg-2 {
+  margin: 0.5rem;
+}
+.mg-4 {
+  margin: 1rem;
+}
+.mg-5 {
+  margin: 1.25rem;
+}
+.w-24 {
+  width: 6rem;
+}
+.h-24 {
+  width: 6rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-5 {
+  padding: 1.25rem;
+}
+.p-7 {
+  padding: 1.75rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.25rem;
+}
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.min-w-5 {
+  min-width: 5rem;
+}
+.rounded {
+  border-radius: 0.25rem;
+}
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.8s;
+}
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+.top-0 {
+  top: 0;
+}
+.left-0 {
+  left: 0;
+}
+.right-0 {
+  right: 0;
+}
+.bottom-0 {
+  bottom: 0;
+}
+.right-3 {
+  right: 0.75rem;
+}
+.text-white {
+  color: var(--white);
+}
+.bg-black {
+  background-color: black;
+}
+.bg-opacity-40 {
+  opacity: 0.4;
+}
+.hidden {
+  display: none;
+}
+.no-underline {
+  text-decoration: none;
+}
+.list-none {
+  list-style-type: none;
+}
+.fixed {
+  position: fixed;
+}
+.w-80 {
+  width: 20rem;
+}
+.h-screen {
+  height: 100vh;
+}
+.bg-green-300 {
+  background-color: rgba(110, 231, 183, 1);
+}
+.bg-green-500 {
+  background-color: rgba(16, 185, 129, 1);
+}
+.bg-gray-100 {
+  background-color: rgba(243, 244, 246, 1);
+}
+.text-gray-400 {
+  color: rgba(156, 163, 175, 1);
+}
+.rounded-full {
+  border-radius: 50%;
+}
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.-my-8 {
+  margin-top: -2rem;
+  margin-bottom: -2rem;
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.ml-24 {
+  margin-left: 6rem;
+}
+.mr-8 {
+  margin-right: 2rem;
+}
+.mr-24 {
+  margin-right: 6rem;
+}
+.justify-center {
+  justify-content: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+@keyframes fadeIn2 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.3;
+  }
+}
+.header__menu-list {
+  margin-top: 5rem;
+}
+.header__menu-item {
+  padding: 1rem;
+}
+.container__group {
+  margin: 0 auto;
+  margin-top: 10rem;
+}
+.container__contract {
+  margin-bottom: 8rem;
+}
+footer {
+  height: 80px;
+  background: var(--bg-green-600);
+}
+.footer__icon {
+  top: -4rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.footer__icon a:hover {
+  color: var(--bg-green-600);
+  transition: all 0.5s;
+}
+.footer__trademark {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 @media (max-width: 639px) {
-  .container {
-    max-width: 639px;
-  }
-  .mjc {
-    justify-content: center;
-  }
-  .m-text-size {
-    font-size: 25;
-  }
-  .m-hiden {
-    display: none;
-  }
-  .m-margin {
-    margin: 8px;
-  }
   .m-1,
   .m-2,
   .m-3,
@@ -186,6 +530,17 @@ header {
     flex: 0 0 100%;
     max-width: 100%;
   }
+  .py-6 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .px-10 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .header .header__navbar {
+    display: none;
+  }
   .project-icon .write-icon {
     display: none;
     padding-left: 0;
@@ -208,16 +563,404 @@ header {
   .margin-0 {
     margin: 0px !important;
   }
-  .text-3xl {
-    font-size: 20px !important;
-  }
   .w-80 {
-    width: 16rem !important;
+    width: 14rem !important;
   }
   .sm-ml {
     margin-left: 1.5rem !important;
   }
   .ib {
     display: inline;
+  }
+  header {
+    height: 3.5rem !important;
+  }
+  .container__about-btn button {
+    height: 2.5rem;
+    width: 8rem;
+  }
+  .container__about-btn button a {
+    font-size: 15px;
+  }
+  .container__about-img h1 {
+    font-size: 30px;
+  }
+  .left-10 {
+    left: 1.5rem;
+  }
+  .header__menu-list {
+    font-size: 20px;
+  }
+  .header__menu-item {
+    padding: 0.5em;
+  }
+  .detail--group {
+    display: inline-block;
+  }
+  .container__group {
+    width: 95%;
+    margin-top: 7rem;
+  }
+  .m-h-12 {
+    height: 4rem;
+  }
+  .m-w-12 {
+    max-width: 4rem !important;
+  }
+  .m-text-sm {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm-1,
+  .sm-2,
+  .sm-3,
+  .sm-4,
+  .sm-5,
+  .sm-6,
+  .sm-7,
+  .sm-8,
+  .sm-9,
+  .sm-10,
+  .sm-11,
+  .sm-12 {
+    display: block;
+  }
+  .sm-1 {
+    flex: 0 0 8.33333%; /* flexrow flexstring flexbasis */
+    max-width: 8.33333%;
+  }
+  .sm-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+  }
+  .sm-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .sm-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .sm-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+  }
+  .sm-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .sm-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+  .sm-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667;
+  }
+  .sm-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .sm-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+  }
+  .sm-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+  }
+  .sm-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .header .header__navbar {
+    display: none;
+  }
+  .detail--group {
+    display: inline-block;
+  }
+  .container__group {
+    width: 80%;
+    margin-top: 7rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .md-1,
+  .md-2,
+  .md-3,
+  .md-4,
+  .md-5,
+  .md-6,
+  .md-7,
+  .md-8,
+  .md-9,
+  .md-10,
+  .md-11,
+  .md-12 {
+    display: block;
+  }
+  .md-1 {
+    flex: 0 0 8.33333%; /* flexrow flexstring flexbasis */
+    max-width: 8.33333%;
+  }
+  .md-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+  }
+  .md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .md-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .md-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+  }
+  .md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .md-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+  .md-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667;
+  }
+  .md-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .md-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+  }
+  .md-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+  }
+  .md-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .md:justify-center {
+    justify-content: center;
+  }
+  .header .header__icon {
+    display: block;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg-1,
+  .lg-2,
+  .lg-3,
+  .lg-4,
+  .lg-5,
+  .lg-6,
+  .lg-7,
+  .lg-8,
+  .lg-9,
+  .lg-10,
+  .lg-11,
+  .lg-12 {
+    display: block;
+  }
+  .lg-1 {
+    flex: 0 0 8.33333%; /* flexrow flexstring flexbasis */
+    max-width: 8.33333%;
+  }
+  .lg-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+  }
+  .lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .lg-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .lg-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+  }
+  .lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .lg-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+  .lg-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667;
+  }
+  .lg-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .lg-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+  }
+  .lg-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+  }
+  .lg-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .header .header__icon {
+    display: none;
+  }
+  .header .header__navbar {
+    display: block;
+  }
+  .container__group {
+    width: 60%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl-1,
+  .xl-2,
+  .xl-3,
+  .xl-4,
+  .xl-5,
+  .xl-6,
+  .xl-7,
+  .xl-8,
+  .xl-9,
+  .xl-10,
+  .xl-11,
+  .xl-12 {
+    display: block;
+  }
+  .xl-1 {
+    flex: 0 0 8.33333%; /* flexrow flexstring flexbasis */
+    max-width: 8.33333%;
+  }
+  .xl-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+  }
+  .xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .xl-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .xl-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+  }
+  .xl-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .xl-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+  .xl-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667;
+  }
+  .xl-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .xl-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+  }
+  .xl-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+  }
+  .xl-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .detail--group {
+    display: flex;
+  }
+}
+
+@media (min-width: 1536px) {
+  .xl-1,
+  .xl-2,
+  .xl-3,
+  .xl-4,
+  .xl-5,
+  .xl-6,
+  .xl-7,
+  .xl-8,
+  .xl-9,
+  .xl-10,
+  .xl-11,
+  .xl-12 {
+    display: block;
+  }
+  .xl-1 {
+    flex: 0 0 8.33333%; /* flexrow flexstring flexbasis */
+    max-width: 8.33333%;
+  }
+  .xl-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+  }
+  .xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .xl-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+  }
+  .xl-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%;
+  }
+  .xl-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .xl-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+  }
+  .xl-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667;
+  }
+  .xl-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .xl-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%;
+  }
+  .xl-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%;
+  }
+  .xl-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 }
