--- a/html-css/nguyen-huu-linh/style.css
+++ b/html-css/nguyen-huu-linh/style.css
@@ -1,67 +1,101 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,300&display=swap");
 
+:root {
+    --main-color-white: #f3f4f6;
+    --main-color-green: #378c3f;
+}
 
-
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body{
-    font-family: 'Roboto';
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Roboto";
 }
 
 a {
     text-decoration: none;
 }
 
-
-
-
 /* FLEXBOX */
 
-.flex { display: flex; }
+.flex {
+    display: flex;
+}
 
-.flex-row { flex-direction: row; }
+.flex-row {
+    flex-direction: row;
+}
 
-.flex-colum { flex-direction: column;}
+.flex-colum {
+    flex-direction: column;
+}
 
-.flex-col { flex-direction: column; }
+.flex-col {
+    flex-direction: column;
+}
 
-.flex-wrap {flex-wrap: wrap;}
+.flex-wrap {
+    flex-wrap: wrap;
+}
 
-.flex-nowrap {flex-wrap: nowrap;}
+.flex-nowrap {
+    flex-wrap: nowrap;
+}
 
-.justify-center {justify-content: center;}
+.justify-center {
+    justify-content: center;
+}
 
-.justify-between {justify-content: space-between;}
+.justify-between {
+    justify-content: space-between;
+}
 
-.justify-end {justify-content: flex-end;}
+.justify-end {
+    justify-content: flex-end;
+}
 
-.items-center { align-items: center; }
+.items-center {
+    align-items: center;
+}
 
+.f-grow-1 {
+    flex-grow: 1;
+}
 
-.f-grow-1 {flex-grow: 1;}
-	
-.f-grow-2 {flex-grow: 2;}
-
-
+.f-grow-2 {
+    flex-grow: 2;
+}
 
 /* --------------------------------- */
-
 
 /* -------Sizing------ */
 
 /* width */
-.w-full {width: 100%;}
-.w-14 {width: 3.5rem;}
+.w-full {
+    width: 100%;
+}
+.w-14 {
+    width: 3.5rem;
+}
 
-.w-40 {width: 10rem;}
+.w-40 {
+    width: 10rem;
+}
 
-.w-48 {width: 12rem;}
+.w-48 {
+    width: 12rem;
+}
 
-.w-80 {width: 20rem;}
+.w-80 {
+    width: 20rem;
+}
 
 .w_25 {
     width: calc(25% - 2rem);
@@ -70,52 +104,60 @@ a {
     width: 30%;
 }
 
-.w-32 { width: 8rem; }
+.w-32 {
+    width: 8rem;
+}
 
+.w_45 {
+    width: 45%;
+}
 
-.w_45 {width: 45%;}
+.w_55 {
+    width: 55%;
+}
 
-.w_55 {width: 55%;}
-
-.w_70 {width: 70%;}
-
+.w_70 {
+    width: 70%;
+}
 
 /* height */
-.h-full {height: 100%;}
-.h-48 {height: 12rem;}
-.h-14 {height: 3.5rem;}
-.h-80 {height: 20rem;}
-.h-100vh {height: 100vh;}
-
+.h-full {
+    height: 100%;
+}
+.h-48 {
+    height: 12rem;
+}
+.h-14 {
+    height: 3.5rem;
+}
+.h-80 {
+    height: 20rem;
+}
+.h-100vh {
+    height: 100vh;
+}
 
 /* -------End Sizing------ */
 
-
-
 /* box shadow */
 
-.box-s-64646f33{
+.box-s1 {
     box-shadow: #64646f33 0px 7px 29px 0px;
 }
 
-
-.box-s-000{
+.box-s2 {
     box-shadow: 0 5px 25px 0 rgb(0 0 0 / 20%);
 }
 
-
 .shadow-lg {
-    --tw-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+    --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-.shadow-255{
-    box-shadow: -15px -15px 15px rgba(255,255,255,0.5),
-    15px 15px 15px rgba(0,0,0,0)
-    inset 4px 4px 5px rgba(255,255,255,0.8),
-    inset -4px -4px 5px rgba(0,0,0,0.05),
-    0px 50px 40px rgba(0,0,0,0.05);
+.box-s3 {
+    box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.5),
+        15px 15px 15px rgba(0, 0, 0, 0) inset 4px 4px 5px rgba(255, 255, 255, 0.8),
+        inset -4px -4px 5px rgba(0, 0, 0, 0.05), 0px 50px 40px rgba(0, 0, 0, 0.05);
 }
-
 
 /* ------------ Typography ---------- */
 
@@ -124,14 +166,14 @@ a {
     line-height: 1.75rem;
 }
 
-.text-2xl { 
+.text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
 }
 
 .text-4xl {
     font-size: 2.25rem;
-    line-height: 2.5rem;    
+    line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -144,35 +186,35 @@ a {
     line-height: 1.75rem;
 }
 
-
-
-
 /* ----------- End Typography ------ */
-
 
 /* Padding */
 
-.p-5 {padding: 1.25rem;}
-
-.p-6 {padding: 1.5rem;}
-
-.px-2 {
-    padding-left: 0.5rem;  
-    padding-right: 0.5rem; 
+.p-5 {
+    padding: 1.25rem;
 }
 
-.py-3 { 
-    padding-top: 0.75rem;  
+.p-6 {
+    padding: 1.5rem;
+}
+
+.px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+.py-3 {
+    padding-top: 0.75rem;
     padding-bottom: 0.75rem;
 }
 
 .py-4 {
-    padding-top: 1rem; 
+    padding-top: 1rem;
     padding-bottom: 1rem;
 }
 
 .py-5 {
-    padding-top: 1.25rem; 
+    padding-top: 1.25rem;
     padding-bottom: 1.25rem;
 }
 
@@ -181,58 +223,77 @@ a {
     padding-bottom: 3.5rem;
 }
 
-
 .px-4 {
-    padding-right: 1rem; 
+    padding-right: 1rem;
     padding-left: 1rem;
 }
 
 .px-6 {
-    padding-right: 1.5rem; 
+    padding-right: 1.5rem;
     padding-left: 1.5rem;
 }
 
 .py-6 {
-    padding-top: 1.5rem; 
+    padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
 
-
 /* Margin */
 
-.mt_-6{
+.mt_-6 {
     margin-top: -1.5rem;
 }
 
-.mt-4 {margin-top: 1rem;}
+.mt-4 {
+    margin-top: 1rem;
+}
 
-.mt-5 {margin-top: 1.25rem;}
+.mt-5 {
+    margin-top: 1.25rem;
+}
 
-.mt-8 {margin-top: 2rem;}
+.mt-8 {
+    margin-top: 2rem;
+}
 
-.mb-3 {margin-bottom: 0.75rem;}
+.mb-3 {
+    margin-bottom: 0.75rem;
+}
 
-.mb-4 {margin-bottom: 1rem;}
+.mb-4 {
+    margin-bottom: 1rem;
+}
 
-.mb-6 {margin-bottom: 1.5rem;}
+.mb-6 {
+    margin-bottom: 1.5rem;
+}
 
-.mb-8 {margin-bottom: 2rem;}
+.mb-8 {
+    margin-bottom: 2rem;
+}
 
-.mb-16 { margin-bottom: 4rem;}
+.mb-16 {
+    margin-bottom: 4rem;
+}
 
-.mr-1 { margin-right: 0.25rem; }
+.mr-1 {
+    margin-right: 0.25rem;
+}
 
-.ml-8 {margin-left: 2rem;}
+.ml-8 {
+    margin-left: 2rem;
+}
 
-.-ml-8 {margin-left: -2rem;}
-
+.-ml-8 {
+    margin-left: -2rem;
+}
 
 .mx-auto {
-    margin-right: auto; 
+    margin-right: auto;
     margin-left: auto;
 }
 
-.mx-2{
+.mx-2 {
     margin-right: 0.5rem;
     margin-left: 0.5rem;
 }
@@ -247,134 +308,152 @@ a {
     margin-bottom: 5rem;
 }
 
-
-
-
-
-
-
 /*------- border -------- */
 
-.rounded-50{border-radius: 50%;}
+.rounded-50 {
+    border-radius: 50%;
+}
 
-.border-transparent { border-color: transparent;}
-	
-
-
-
+.border-transparent {
+    border-color: transparent;
+}
 
 /* text */
 
-.text-white{color: #fff;}
-
-.text-333{color:#333}
-
-.text-1773ea{color:#1773ea}
-
-.text-1c9cea{color:#1c9cea}
-
-.text-e34133{color:#e34133}
-
-.text-dd2a44{color:#dd2a44}
-
-
-.text-center {text-align: center;}
-
-
-.font-medium {	font-weight: 500;}
-
-.font-bold {font-weight: 700;}
-
-.font-200 {
-    font-weight: 200;
-
+.text-white {
+    color: #fff;
 }
 
-.font-300 {
+.text-back {
+    color: #333;
+}
+
+.text-blue-100 {
+    color: #1c9cea;
+}
+
+.text-blue-200 {
+    color: #1773ea;
+}
+
+.text-red-200 {
+    color: #e34133;
+}
+
+.text-red-300 {
+    color: #dd2a44;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.font-extralight {
+    font-weight: 200;
+}
+
+.font-light {
     font-weight: 300;
 }
 
-.font-400 {
+.font-normal {
     font-weight: 400;
 }
 
+.font-medium {
+    font-weight: 500;
+}
 
-
-
-
+.font-bold {
+    font-weight: 700;
+}
 
 /* background*/
-.bg-img{
+.bg-img {
     background-image: url("https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1353&q=80");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.bg-cover{background-size: cover;}
+.bg-cover {
+    background-size: cover;
+}
 
-.bg-no-repeat {background-repeat: no-repeat;}
+.bg-no-repeat {
+    background-repeat: no-repeat;
+}
 
 .bg-transparent {
     background-color: transparent;
 }
 
-
-.bg-green-700{
+.bg-green-700 {
     --tw-bg-opacity: 1;
     background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
 }
 
-.bg-white {background-color: #fff;}
+.bg-white {
+    background-color: #fff;
+}
 
-.bg-888 {background-color: #888;}
+.bg-main-green {
+    background-color: var(--main-color-green);
+}
 
-.bg-378c3f {background-color: #378c3f;}
+.bg-gray-500 {
+    background-color: #8888885c;
+}
 
-.bg-8888885c{ background-color: #8888885c;}
-
-.bg-f3f4f6{ background-color: #f3f4f6; }
-
+.bg-main-white {
+    background-color: var(--main-color-white);
+}
 
 /* position */
 
-.relative {position: relative;}
+.relative {
+    position: relative;
+}
 
-.absolute {position:absolute;}
+.absolute {
+    position: absolute;
+}
 
-.fixed {position: fixed;}
-
+.fixed {
+    position: fixed;
+}
 
 .absolute-center::after {
     box-shadow: inset 0 0 0 200px rgb(255 255 255 / 5%);
 }
 
-
-
 /* ----Layout---- */
 
-.object-fil {object-fit: cover;}
+.object-fil {
+    object-fit: cover;
+}
 
-.hidden {display: none;}
+.hidden {
+    display: none;
+}
 
 .menu-list {
     display: none;
 }
 
-
-.z-50 {z-index: 50;}
-
+.z-50 {
+    z-index: 50;
+}
 
 /* ----End Layout---- */
 
-
 /* ----Interactivity---- */
 
-.cursor-pointer { cursor: pointer;}
-
+.cursor-pointer {
+    cursor: pointer;
+}
 
 /* ----End Interactivity---- */
-
 
 /* Transitions and Animation */
 
@@ -384,15 +463,54 @@ a {
     transition-duration: 150ms;
 }
 
-.transition-5ms{transition: 5ms;}
+.transition-5ms {
+    transition: 5ms;
+}
 
+.ani {
+    animation: movedown 1s linear 1;
+    animation-delay: 1s;
+    visibility: hidden;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movedown {
+    0% {
+        transform: translateY(-100px);
+        visibility: visible;
+    }
+
+    100% {
+        transform: translateY(0);
+        visibility: visible;
+    }
+}
+
+.ani2 {
+    animation: zoomin 1s linear 1;
+    animation-delay: 1s;
+    visibility: hidden;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoomin {
+    0% {
+        transform: scale(0.5);
+        visibility: visible;
+    }
+
+    100% {
+        transform: scale(1);
+        visibility: visible;
+    }
+}
 
 /* ------------ Hover ------------- */
 
 .hover\:bg-blue-600:hover {
     --bg-opacity: 1;
     background-color: #3182ce;
-    background-color: rgba(49,130,206,var(--bg-opacity));
+    background-color: rgba(49, 130, 206, var(--bg-opacity));
 }
 
 .hover\:scale-125:hover {
@@ -408,33 +526,25 @@ a {
     --transform-skew-y: 0;
     --transform-scale-x: 1;
     --transform-scale-y: 1;
-    transform: translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
+    transform: translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y))
+        rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y))
+        scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
 }
 
 .duration-500 {
-    transition-duration: .5s;
+    transition-duration: 0.5s;
 }
-
-
-
-
-
-
-
-
 
 /* -------CUSTOMS------------ */
 
 .absolute-center {
-    position:absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
 
-
-svg{
+svg {
     position: relative;
     width: 150px;
     height: 150px;
@@ -451,65 +561,65 @@ svg circle {
     transform: translate(5px, 5px);
 }
 
-svg circle:nth-child(2){
+svg circle:nth-child(2) {
     stroke-dasharray: 440;
 }
 
-.stroke-set-1{
-    stroke-dashoffset: calc( 440 - (440 * 90) / 100);
+.stroke-set-1 {
+    stroke-dashoffset: calc(440 - (440 * 90) / 100);
     stroke: #fd4815;
 }
 
-.stroke-set-2{
-    stroke-dashoffset: calc( 440 - (440 * 80) / 100);
+.stroke-set-2 {
+    stroke-dashoffset: calc(440 - (440 * 80) / 100);
     stroke: #2996cf;
 }
 
-.stroke-set-3{
-    stroke-dashoffset: calc( 440 - (440 * 50) / 100);
+.stroke-set-3 {
+    stroke-dashoffset: calc(440 - (440 * 50) / 100);
     stroke: #f7d800;
 }
 
-.stroke-set-4{
-    stroke-dashoffset: calc( 440 - (440 * 30) / 100);
-    stroke:#61dafb;
+.stroke-set-4 {
+    stroke-dashoffset: calc(440 - (440 * 30) / 100);
+    stroke: #61dafb;
 }
 
-.stroke-set-5{
-    stroke-dashoffset: calc( 440 - (440 * 10) / 100);
+.stroke-set-5 {
+    stroke-dashoffset: calc(440 - (440 * 10) / 100);
     stroke: #90c53f;
 }
 
-.stroke-set-6{
-    stroke-dashoffset: calc( 440 - (440 * 35) / 100);
-    stroke:#001833;
+.stroke-set-6 {
+    stroke-dashoffset: calc(440 - (440 * 35) / 100);
+    stroke: #001833;
 }
 
-
-
-
 /* container */
-.container {width: 100%;}
+.container {
+    width: 100%;
+}
 
 /* --------------- */
 
 /* medium */
 
-@media screen and (min-width: 640px){
-    .container { max-width:640px; }
-
-  
-
+@media screen and (min-width: 640px) {
+    .container {
+        max-width: 640px;
+    }
 }
 
-@media screen and (min-width: 768px){
-    .container { max-width:768px; }
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
 }
 
-@media screen and (min-width: 1024px){
-
-    
-    .container { max-width:1024px; }
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 1024px;
+    }
 
     .lg\:w-auto {
         width: auto;
@@ -535,28 +645,31 @@ svg circle:nth-child(2){
         display: none;
     }
 }
-@media screen and (min-width: 1280px){
-    .container { max-width:1280px; }
+@media screen and (min-width: 1280px) {
+    .container {
+        max-width: 1280px;
+    }
 }
 
-@media screen and (min-width: 1536x){
-    .container { max-width: 1536px; }
+@media screen and (min-width: 1536x) {
+    .container {
+        max-width: 1536px;
+    }
 }
 
-@media screen and (max-width:1023px){
-
-    .sc\:w-full{
+@media screen and (max-width: 1023px) {
+    .sc\:w-full {
         width: 100%;
     }
-    .sc\:z-30{
+    .sc\:z-30 {
         z-index: 30;
     }
 
-    .sc\:flex{
+    .sc\:flex {
         display: flex;
     }
 
-    .sc\:flex-colum{
+    .sc\:flex-colum {
         flex-direction: column;
     }
 
@@ -568,73 +681,67 @@ svg circle:nth-child(2){
         align-items: center;
     }
 
-    .sc\:justity-start{
+    .sc\:justity-start {
         justify-content: flex-start;
     }
 
-    .sc\:justity-center{
+    .sc\:justity-center {
         justify-content: center;
     }
 
-    .sc\:mt-8{
+    .sc\:mt-8 {
         margin-top: 2rem;
     }
 
-    .btn_menu:checked ~ .hidden{
+    .btn_menu:checked ~ .hidden {
         display: flex;
         margin-top: 12px;
-        transition: .5s;
+        transition: 0.5s;
     }
 
-    .sc\:bg-8888885c{
+    .sc\:bg-8888885c {
         background-color: #8888885c;
     }
 
-    .sc\:w_30{
-       width: calc((100%/3) - 2rem);
+    .sc\:w_30 {
+        width: calc((100% / 3) - 2rem);
     }
-
-    
 }
 
+@media screen and (max-width: 767px) {
+    .lc\:w_50 {
+        width: calc((100% / 2) - 2rem);
+    }
 
-@media screen and (max-width:767px) {
-    .lc\:w_50{
-        width: calc((100%/2) - 2rem);
-     }
-
-     .lc\:flex-colum{
+    .lc\:flex-colum {
         flex-direction: column;
     }
 
-    .lc\:w-full{
+    .lc\:w-full {
         width: 100%;
     }
 }
 
-@media screen and (max-width:450px) {
-
-    .fc\:w-full{
+@media screen and (max-width: 450px) {
+    .fc\:w-full {
         width: 100%;
     }
 
-    .fc\:flex-colum{
+    .fc\:flex-colum {
         flex-direction: column;
     }
 
-    .fc\:mb-2{margin-bottom: 0.5rem;}
+    .fc\:mb-2 {
+        margin-bottom: 0.5rem;
+    }
 }
 
-@media screen and (max-width:380px) {
-    
-    .tc\:w-40{width: 10rem;}
+@media screen and (max-width: 380px) {
+    .tc\:w-40 {
+        width: 10rem;
+    }
 
-    .tc\:h-40{height: 10rem;}
+    .tc\:h-40 {
+        height: 10rem;
+    }
 }
-
-
-
-
-
-
-
