--- a/html-css/nguyen-trung-duc/style.css
+++ b/html-css/nguyen-trung-duc/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, tahoma, sans-serif;
     text-transform: capitalize;
     outline: none;
     border: none;
@@ -9,107 +9,106 @@
     font-weight: normal;
 }   
 
-.Fs-625 {
+.fs-625 {
     font-size: 62.5%;
 }
 
-.Fw-w {
+.fw-w {
     flex-wrap: wrap;
 }
 
-.Ov-h {
+.ov-h {
     overflow: hidden;
 }
 
-.Mh-100 {
+.mh-100 {
     min-height: 100vh;
 }
 
-.Pb-10 {
+.pb-10 {
     padding-bottom: 10rem;
 }
 
-.Fd-c {
+.fd-c {
     flex-direction: column;
 }
-
-.D-f {
+.d-f {
     display: flex;
 }
 
-.Jc-c {
+.jc-c {
     justify-content: center;
 }
 
-.Fd-c {
+.fd-c {
     flex-direction: columns;
 }
 
-.Ai-c {
+.ai-c {
     align-items: center;
 }
 
-.Jc-sb {
+.jc-sb {
     justify-content: space-between;
 }
 
-.Bg-lg {
+.bg-lg {
     background: linear-gradient(deeppink, purple);
 }
 
-.P-55 {
+.p-55 {
     padding: 5.5rem;
 }
 
-.Pxy-02 {
+.pxy-02 {
     padding:0 2rem ;
 }
 
-.W-35 {
+.w-35 {
     width: 35rem;
 }
 
-.Bxsh-012r {
+.bxsh-012r {
     box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
 }
 
-.Bdf-b {
+.bdf-b {
     backdrop-filter: blur(.4rem);
 }
 
-.Ta-c {
+.ta-c {
     text-align: center;
 }
 
-.P-1 {
+.p-1 {
     padding: 1rem;
 }
 
-.Pt-2 {
+.pt-2 {
     padding-top: 2rem;
 }
 
-.Fs-25 {
+.fs-25 {
     font-size: 2.5rem;
 }
 
-.Mgt-1 {
+.mgt-1 {
     margin-top: 1rem;
 }
 
-.Mgb-1 {
+.mgb-1 {
     margin-bottom: 1rem;
 }
 
-.W-15 {
+.w-15 {
     width: 15rem;
 }
 
-.Bdrs-50 {
+.bdrs-50 {
     border-radius: 50%;
 }
 
-.Bdrs-20 {
+.bdrs-20 {
     border-radius: 20%;
 }
 
@@ -117,94 +116,94 @@
     object-fit: cover;
 }
 
-.Fs-5 {
+.fs-5 {
     font-size: 5rem;
 }
 
-.Bxsh-0001 {
+.bxsh-0001 {
     box-shadow: 0 0 0 1rem rgba(255, 255, 255, .2);
 }   
 
-.Fs-3 {
+.fs-3 {
     font-size: 3rem;
 }
 
-.C-fff {
+.c-fff {
     color: #fff;
 }
 
-.Pb-2 {
+.pb-2 {
     padding-bottom: 2rem;
 }
 
-.Py {
+.py {
     padding-top: .5rem;
     padding-bottom: .5rem;
 }
 
-.Fs-18 {
+.fs-18 {
     font-size: 1.8rem;
 }
 
-.C-eee {
+.c-eee {
     color: #eee;
 }
 
-.Fw-lr {
+.fw-lr {
     font-weight: lighter;
 }
 
-.List-n {
+.list-n {
     list-style-type: none;
 }
 
-.Mgl-2 {
+.mgl-2 {
     margin-left: 2rem;
 }
 
-.Mx-3 {
+.mx-3 {
     margin-left: 3rem;
     margin-right: 3rem;
 }
 
-.Mx-1 {
+.mx-1 {
     margin-left: 1rem;
     margin-right: 1rem;
 }
 
-.Mgt-10 {
+.mgt-10 {
     margin-top: 10rem ;
 }
 
-.Bg-rgba {
+.bg-rgba {
     background: rgba(255, 255, 255, .2);
 }
 
-.P-15 {
+.p-15 {
     padding: 1.5rem;
 }
 
-.P-1535 {
+.p-1535 {
     padding: 1rem 3.5rem;
 }
 
-.Fs-2 {
+.fs-2 {
     font-size: 2rem;
 }
 
-.P-2 {
+.p-2 {
     padding: 2rem;
 }
 
-.Bdrs-1 {
+.bdrs-1 {
     border-radius: 1rem;
 }
 
-.Mg {
+.mg {
     margin: 1rem;
 }
 
-.D-b {
+.d-b {
     display: block;
 }
 
@@ -217,31 +216,31 @@
     color: #333;
 }
 
-.H-58 {
+.h-58 {
     height: 59rem;
 }
 
-.H-21 {
+.h-21 {
     height: 21rem;
 }
 
-.W-80 {
+.w-80 {
     width: 80rem;
 }
 
-.H-15 {
+.h-15 {
     height: 15rem;
 }
 
-.W-15 {
+.w-15 {
     width: 15rem;
 }
 
-.Cs-p {
+.cs-p {
     cursor: pointer;
 }
 
-.Fs-15 {
+.fs-15 {
     font-size: 1.5rem;
 }
 
@@ -257,19 +256,19 @@
 	transform: scale(1.1);
 }
 
-.Pxy-02 {
+.pxy-02 {
     padding: 0 2rem;
 }
 
-.Borl-2-s-eee {
+.borl-2-s-eee {
     border-left: .2rem solid #eee;
 }
 
-.P-r {
+.p-r {
     position: relative;
 }
 
-.Year-before::before {
+.year-before::before {
     content: "";
     position: absolute;
     height: 2rem;
@@ -280,47 +279,47 @@
     left: -1.1rem;
 }
 
-.P-12 {
+.p-12 {
     padding: 1rem 2rem;
 }
 
-.W-60{
+.w-60{
     width: 60%;
 }
 
-.P-01 {
+.p-01 {
     padding: 0 1rem;
 }
 
-.H-4 {
+.h-4 {
     height: 4rem;
 }
 
-.M-1 {
+.m-1 {
     margin: 1rem;
 }
 
-.W-45 {
+.w-45 {
     width: 45%;
 }
 
-.W-97 {
+.w-97 {
     width: 97%;
 }
 
-.Mgt-5 {
+.mgt-5 {
     margin-top: 5rem;
 }
 
-.Ml-1 {
+.ml-1 {
     margin-left: 1rem;
 }
 
-.Pd-15 {
+.pd-15 {
     padding: 1rem 5rem;
 }
 
-.Mgr-2 {
+.mgr-2 {
     margin-right: 2rem;
 }
 
@@ -334,6 +333,6 @@ textarea::placeholder
     color: white;
 }
 
-.Mgt-2 {
+.mgt-2 {
     margin-top: 2rem;
 }
